# Telegram-Drive

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml
app/: README.md  package-lock.json  package.json
app/scripts/: check-tauri-prereqs.mjs  run-tauri.mjs
app/src/: App.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  models.rs  server.rs
app/src-tauri/src/commands/: fs.rs  network.rs  preview.rs  utils.rs
app/src-tauri/src/nas/: api.rs  crypto.rs  db.rs  models.rs  state.rs
app/src/components/: Dashboard.tsx
app/src/hooks/: useFileOperations.ts  useTelegramConnection.ts
app/src/lib/: nasApi.ts
app/src/types/: nas.ts
backend/: .env.example  README.md  package.json
backend/scripts/: check-tauri-prereqs.mjs  run-tauri.mjs
backend/src/: main.rs
backend/src-tauri/: Cargo.toml  tauri.conf.json
backend/src-tauri/icons/: icon.icns
backend/src-tauri/src/: bandwidth.rs  lib.rs  models.rs  server.rs
frontend/: .env.example  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: kill-port.mjs  tauri.mjs
frontend/src/: App.css  App.tsx  utils.ts
frontend/src/components/: AuthWizard.tsx  Dashboard.tsx  ErrorBoundary.tsx  FileTypeIcon.tsx  ThemeToggle.tsx  UpdateBanner.tsx
frontend/src/context/: AudioPlayerContext.tsx  ConfirmContext.tsx
scripts/: dev.mjs  export-artifacts.mjs
shared/: package.json
shared/src/: nas.ts  telegram.ts
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  server.rs
(+58 files in other folders)
