[package]
name = "app"
version = "1.2.0"
description = "Turn your Telegram account into an unlimited, secure cloud storage drive. an Open-source desktop app built with Tauri, Rust, and React."
authors = ["Cameron Amer"]
edition = "2021"



[lib]

name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
grammers-client = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
grammers-session = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
grammers-mtsender = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
tokio = { version = "1", features = ["full"] }

tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2"
chrono = "0.4"
base64 = "0.21"
log = "0.4"
env_logger = "0.11"
tauri-plugin-updater = "2.9.0"
actix-web = "4"
actix-cors = "0.7"
futures = "0.3"
async-stream = "0.3"
actix-rt = "2"
tauri-plugin-process = "2.3.1"
rand = "0.8"
argon2 = "0.5"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
aes-gcm-siv = "0.11"
sqlite = "0.37"
